# challenge-bravo

./: .Dockerfile  .air.toml  .babelrc  .codecov.yml  .coveragerc  .cproject  .dockerfile  .dockerignore  .dockeringore  .editorconfig  .env  .env-docker  .env-example  .env-sample  .env.dev  .env.dist  .env.example  .env.exemple  .env.sample  .env.test  .env.test.example  .env.testing  .env_example  .env_worker  .envtemplete  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .huskyrc.json  .lintstagedrc.json  .mocharc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  (+344 more)
src/: .dockerignore  .env  .env.example  .env.sample  .gitignore  .mocharc.js  App.js  App.ts  AppError.ts  Application.php  CMakeLists.txt  Connection.php  Conversor.js  CucoAPI.sln  CurrencyConversionAPI.sln  Dispatcher.php  Dockerfile  README.md  Request.php  RouteCollection.php  Router.php  Routes.ts  Server.ts  Validator.php  ValidatorReturn.php  api.py  app.controller.spec.ts  app.controller.ts  app.js  app.module.ts  app.py  app.ts  application.py  available_currencies  bootstrap.js  bootstrap.php  cacheMiddleware.js  cluster.js  coinConfig.js  composer.json  (+65 more)
src/5 - Testes/: README.md
src/App/: ConfigProvider.php  Constants.php  Version.php
src/ChallengeBravo.Application/: AppConsts.cs  ChallengeBravo.Application.csproj  ChallengeBravoAppServiceBase.cs  ChallengeBravoApplicationModule.cs  CustomDtoMapper.cs
src/ChallengeBravo.Core/: AppVersionHelper.cs  ChallengeBravo.Core.csproj  ChallengeBravoConsts.cs  ChallengeBravoCoreModule.cs
src/ChallengeBravo.EntityFrameworkCore/: ChallengeBravo.EntityFrameworkCore.csproj
src/ChallengeBravo.Migrator/: ChallengeBravo.Migrator.csproj  ChallengeBravoMigratorModule.cs  Log.cs  MultiTenantMigrateExecuter.cs  Program.cs  appsettings.json
src/ChallengeBravo.Web.Core/: ChallengeBravo.Web.Core.csproj  ChallengeBravoWebCoreModule.cs
src/ChallengeBravo.Web.Host/: ChallengeBravo.Web.Host.csproj  appsettings.Staging.json  appsettings.json  docker-compose.yml
src/ChallengeBravo.Web.Mvc/: ChallengeBravo.Web.Mvc.csproj  Dockerfile  appsettings.Staging.json  appsettings.json
src/Command/: UpdateCurrenciesCommand.php
src/Controller/: ConverterController.php  CurrencyController.php  CurrencyController.ts  ErrorController.ts  HelloWorld.php  index.ts
src/Controllers/: CurrencyController.ts  Validations.ts  types.ts
src/Cuco.API/: Cuco.API.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.Local.json  appsettings.Production.json  appsettings.json
src/Cuco.Application/: Cuco.Application.csproj
src/Cuco.Application.Test/: Cuco.Application.Test.csproj  CurrencyConversionServiceTests.cs
src/Cuco.Application.Tests/: Cuco.Application.Tests.csproj
src/Cuco.Commons/: Result.cs
src/Cuco.Cron/: Cuco.Cron.csproj  Program.cs
src/Cuco.Domain/: Cuco.Domain.csproj
src/Cuco.Infra/: Cuco.Infra.csproj
src/Cuco.Infra.Tests/: Cuco.Infra.Tests.csproj
src/Cuco.IoC/: Cuco.IoC.csproj
src/Cuco.Sync.Cron/: Cuco.Sync.Cron.csproj  Dockerfile
src/Currency/: currency.js  currencyQuery.js  currencyService.js
src/CurrencyConversion.API/: CurrencyConversion.API.csproj  Program.cs  appsettings.Local.json
src/CurrencyConversion.Application.Test/: AddCurrencyServiceTests.cs  DeleteCurrencyServiceTests.cs  ListCurrenciesServiceTests.cs  UpdateCurrencyServiceTests.cs
src/CurrencyConversion.Domain/: CurrencyConversion.Domain.csproj
src/CurrencyConversion.Infra/: CurrencyConversion.Infra.csproj
src/CurrencyConversion.IoC/: CurrencyConversion.IoC.csproj
src/DesafioBravo/: DesafioBravo.sln
src/Entities/: Currency.test.ts  Currency.ts
src/Exception/: CurrencyCodeException.php  CurrencyValueException.php
src/Logger/: UpdaterLogger.php
src/Model/: Currency.php
src/Quotes/: quote.js  quoteQuery.js  quoteService.js
src/Repository/: CurrenciesRepository.ts  CurrencyRepository.php  CurrencyRepositoryInterface.php  types.ts
src/Services/: Currency.ts  CurrencyService.test.ts  CurrencyService.ts  index.ts  types.ts
src/Utils/: Redis.ts  RequestError.ts  Responses.ts  Server.ts
src/__test__/: currency.e2e.test.ts
src/__tests__/: currencies.test.ts  jest.setup.js  stress-test.ts
src/_controllers/: health.js  index.js
src/_use-cases/: index.js
src/adapters/: externalApiAdapter.go
src/api/: __init__.py  app.js  artisan  container.js  currency.py  quotation.js  requirements.txt  router.js  routes.js
src/api-challenge-bravo/: Dockerfile  Program.cs  Startup.cs  api-challenge-bravo.csproj
src/app/: .env  .eslintrc.js  ConverterCoin.php  Dockerfile  app.js  index.js  package.json
src/application/: app.py  index.py  settings.py
src/auth/: auth.guard.ts
src/base/: entity.base.ts  repository.base.ts
src/bootstrap/: app.js  app.php
src/bravo/: bravo.module.ts
src/cache/: ICache.ts  RedisCache.ts  config.ts  currencyCache.ts
src/cambio/: cambio.controller.spec.ts  cambio.controller.ts  cambio.module.ts  cambio.service.spec.ts  cambio.service.ts
src/classes/: currency.php
src/client/: AwesomeApi.ts
src/coins/: Calculate.py  Coins.py  api.py
src/common/: __init__.py  config.py  constant.py  swagger.py  util.py
src/config/: MongoDBConnection.js  apiConvert.ts  auth.json  cache.js  config.go  config.js  config.module.ts  config.service.ts  config.ts  configuration.ts  cors.js  database.js  database.php  database.ts  db_connect.config.js  defaultCoins.ts  defaultCurrencies.ts  di-setup.js  env.config.ts  env.ts  express.js  index.js  knex.ts  logger.config.js  logger.js  mongo-db-config.js  mongoose.js  orm.config.ts  redis.config.ts  redis.js  redis.ts  repositories.php  routes.js  server.js  swagger.js  swagger.ts  typeorm.config.ts  typeorm.ts
src/configs/: api.config.ts  redis.config.ts  typeorm.config.ts
src/container/: index.ts
src/controller/: CoinController.js  CoinController.ts  CoinExchangeController.js  ControllerInterface.ts  CotationController.ts  RestController.cpp  RestController.h  autenticationController.js  (+4 more)
(+8628 files in other folders)
