[metadata]
name = desafio
version = attr: desafio.__version__
url = 
author = Diego Silva de Salles
author_email = disalles7@gmail.com
description = App Basico flask SQLAlchemy
long_description = file: README.md

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    Flask
    Flask-SQLAlchemy

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests